# CUDA-Practice

./: CMakeLists.txt
src/5_matmul/: CudaUtil.cuh  MatMul.cu  Matrix.cu  Matrix.cuh  Timer.cuh
src/6_optimized_matmul/: CudaUtil.cu  Timer.cu  main.cu
